Yemek ve kilo cardview ları eklendi

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,4 +42,12 @@
     <color name="materail_green">#FF66ff66</color>
     <color name="materail_blue">#FF0BCCE6</color>
     <color name="materail_white">#FFFAFAFA</color>
+    <color name="materail_red">#FFFF3B30</color>
+    <color name="materail_brown">#FFA2845E</color>
+
+    <!--For textview shadow-->
+    <color name="light_font">#FBFBFB</color>
+    <color name="grey_font">#ff9e9e9e</color>
+    <color name="text_shadow">#7F000000</color>
+    <color name="text_shadow_white">#FFFFFF</color>
 </resources>
