--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -57,6 +57,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/transparent_border"
             android:text="UYE OL"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/videoView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
