--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,44 +31,20 @@
                 android:layout_gravity="bottom">
                 <android.support.v7.widget.CardView
                     android:layout_width="400dp"
-                    android:layout_height="360dp">
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="50dp"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_gravity="top"
-                        android:weightSum="3">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="15dp"
-                            android:text="Kalori"
-                            android:textSize="15sp"
-                            android:layout_gravity="left"
-                            android:layout_weight="1"
-                            android:gravity="center"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="15dp"
-                            android:text="Aktif Süre"
-                            android:textSize="15sp"
-                            android:layout_gravity="top|center"
-                            android:layout_weight="1"
-                            android:gravity="center"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="15dp"
-                            android:text="Kilometre"
-                            android:textSize="15sp"
-                            android:layout_gravity="right"
-                            android:layout_weight="1"
-                            android:gravity="center"/>
-                    </LinearLayout>
+                    android:layout_height="360dp"
+                    android:background="@color/black">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:layout_margin = "10dp"
+                        android:text="Adım Sayar"
+                        android:textSize="14sp"
+                        android:textColor="@color/black"
+                        android:shadowColor="@color/grey_font"
+                        android:shadowDx="1"
+                        android:shadowDy="1"
+                        android:shadowRadius="2"/>
+
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -128,7 +104,43 @@
                         app:apsv_preview_colors="@array/default_preview"
                         app:apsv_preview_bg="#ccc">
                     </devlight.io.library.ArcProgressStackView>
-
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="50dp"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_gravity="bottom"
+                        android:weightSum="3">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="15dp"
+                            android:text="Kalori"
+                            android:textSize="15sp"
+                            android:layout_gravity="left"
+                            android:layout_weight="1"
+                            android:gravity="center"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="15dp"
+                            android:text="Aktif Süre"
+                            android:textSize="15sp"
+                            android:layout_gravity="top|center"
+                            android:layout_weight="1"
+                            android:gravity="center"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="15dp"
+                            android:text="Kilometre"
+                            android:textSize="15sp"
+                            android:layout_gravity="right"
+                            android:layout_weight="1"
+                            android:gravity="center"/>
+                    </LinearLayout>
                 </android.support.v7.widget.CardView>
             </LinearLayout>
 
@@ -215,7 +227,7 @@
                             android:layout_height="27dp"
                             android:gravity="center"
                             android:text="START"
-                            android:background="@drawable/button_border"/>
+                            android:background="@drawable/button_border_green"/>
                             <!--android:background="?android:attr/selectableItemBackground"/>-->
 
 
@@ -330,7 +342,68 @@
                 <android.support.v7.widget.CardView
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
-                    android:id="@+id/bankcardId2"
+                    android:id="@+id/weight"
+                    android:layout_width="130dp"
+                    android:layout_height="190dp"
+                    android:layout_margin="3dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+                        <ImageView
+                            android:id="@+id/myImageView"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:background="@drawable/circle_shape_red"
+                            android:src="@drawable/weight_icon_kg"
+                            android:padding="10dp"/>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:gravity="center">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textStyle="bold"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginRight="10dp"
+                                android:text="80.5"
+                                android:textSize="30sp"
+                                android:textColor="@color/materail_red"
+                                />
+                        </LinearLayout>
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@color/lightgray"
+                            android:layout_margin="10dp"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:text="Weight"
+                            android:textSize="10sp"
+                            android:layout_marginBottom="5dp"/>
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="27dp"
+                            android:gravity="center"
+                            android:text="Go"
+                            android:background="@drawable/button_border_red"/>
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+            </LinearLayout>
+            <LinearLayout
+                android:clipToPadding="false"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <android.support.v7.widget.CardView
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:clickable="true"
                     android:layout_width="130dp"
                     android:layout_height="190dp"
                     android:layout_margin="3dp">
@@ -342,15 +415,94 @@
                         <ImageView
                             android:layout_width="64dp"
                             android:layout_height="64dp"
-                            android:background="@drawable/circle_shape_purple"
-                            android:src="@drawable/ic_monetization_on_black_24dp"
+                            android:background="@drawable/circle_shape_brown"
+                            android:src="@drawable/fork_mork"
+                            android:padding="10dp"/>
+                        <!--<com.nex3z.notificationbadge.NotificationBadge-->
+                        <!--android:id="@+id/badge"-->
+                        <!--android:layout_toEndOf="@+id/icon"-->
+                        <!--android:layout_alignTop="@+id/icon"-->
+                        <!--android:layout_width="28dp"-->
+                        <!--android:layout_height="8dp"-->
+                        <!--android:layout_marginStart="-16dp"-->
+                        <!--android:layout_marginTop="-8dp"-->
+                        <!--app:badgeBackground="@drawable/badge_view"-->
+                        <!--app:maxTextLength="2"-->
+                        <!--tools:ignore="ObsoleteLayoutParam">-->
+                        <!--</com.nex3z.notificationbadge.NotificationBadge>-->
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:gravity="center">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textStyle="bold"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginRight="10dp"
+                                android:text="1150"
+                                android:textSize="30sp"
+                                android:textColor="@color/materail_brown"
+                                />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:text="cal"
+                                android:textSize="10sp"
+                                android:textColor="@color/materail_brown"/>
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@color/lightgray"
+                            android:layout_marginTop="7dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginBottom="3dp"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:text="Lunch"
+                            android:textSize="10sp"
+                            android:layout_marginBottom="5dp"/>
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="27dp"
+                            android:gravity="center"
+                            android:text="Add"
+                            android:background="@drawable/button_border_brown"/>
+                        <!--android:background="?android:attr/selectableItemBackground"/>-->
+
+
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+                <android.support.v7.widget.CardView
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:layout_width="160dp"
+                    android:layout_height="190dp"
+                    android:layout_margin="10dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+                        <ImageView
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:background="@drawable/circle_shape_pink"
                             android:padding="10dp"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
                             android:layout_marginTop="10dp"
-                            android:text="Banking"/>
+                            android:text="Ideas"/>
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
@@ -366,6 +518,7 @@
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
+
             </LinearLayout>
             <LinearLayout
                 android:clipToPadding="false"
@@ -374,12 +527,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <android.support.v7.widget.CardView
-                    android:id="@+id/add_card"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
-                    android:layout_width="160dp"
+                    android:layout_width="130dp"
                     android:layout_height="190dp"
-                    android:layout_margin="10dp">
+                    android:layout_margin="3dp">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -388,26 +540,57 @@
                         <ImageView
                             android:layout_width="64dp"
                             android:layout_height="64dp"
-                            android:background="@drawable/circle_shape_green"
+                            android:background="@drawable/circle_shape_brown"
+                            android:src="@drawable/fork_mork"
                             android:padding="10dp"/>
-                        <TextView
+
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textStyle="bold"
-                            android:layout_marginTop="10dp"
-                            android:text="Add"/>
+                            android:orientation="horizontal"
+                            android:gravity="center">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textStyle="bold"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginRight="10dp"
+                                android:text="1150"
+                                android:textSize="30sp"
+                                android:textColor="@color/materail_brown"
+                                />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:text="cal"
+                                android:textSize="10sp"
+                                android:textColor="@color/materail_brown"/>
+                        </LinearLayout>
+
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:background="@color/lightgray"
-                            android:layout_margin="10dp"/>
+                            android:layout_marginTop="7dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginBottom="3dp"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:text="Lunch"
+                            android:textSize="10sp"
+                            android:layout_marginBottom="5dp"/>
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="27dp"
                             android:gravity="center"
-                            android:text="Check your bank activities"
-                            android:padding="5dp"
-                            android:textColor="@android:color/darker_gray"/>
+                            android:text="Add"
+                            android:background="@drawable/button_border_brown"/>
+                        <!--android:background="?android:attr/selectableItemBackground"/>-->
+
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
