--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,9 +7,9 @@
     android:orientation="vertical">
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="405dp">
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="405dp">-->
         <LinearLayout
             android:background="@drawable/gradient_background"
             android:layout_width="match_parent"
@@ -112,7 +112,7 @@
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
-    </RelativeLayout>
+    <!--</RelativeLayout>-->
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
