--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -44,6 +44,7 @@
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:clickable="true"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteY="375dp" />
 
@@ -62,6 +63,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_button"
+            android:clickable="true"
             tools:ignore="MissingConstraints" />
     </LinearLayout>
 
