--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,9 +7,9 @@
     android:orientation="vertical">
 
 
-    <!--<RelativeLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="405dp">-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="405dp">
         <LinearLayout
             android:background="@drawable/gradient_background"
             android:layout_width="match_parent"
@@ -19,8 +19,7 @@
                 android:layout_marginTop="45dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:src="@drawable/pjp"/>
+                android:layout_height="120dp"/>
             <TextView
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center_horizontal"
@@ -112,7 +111,7 @@
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
-    <!--</RelativeLayout>-->
+    </RelativeLayout>
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
