Vestel Yarı Final Aşamasını Tamamladık.

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -51,7 +51,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Photos"
+                        android:text="Activities"
                         android:textSize="20sp"
                         />
                     <TextView
@@ -129,6 +129,6 @@
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Follow Me"/>
+        android:text="Takip Et"/>
     </ScrollView>
 </LinearLayout>
