--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="startBlue">#09C6DF</color>
     <color name="endBlue">#0BCCE6</color>
 
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#333333</color>
 
     <color name="primary">#E43F3F</color>
     <color name="primary_darker">#E12929</color>
