--- a/app/src/main/res/layout/fragment_challenge.xml
+++ b/app/src/main/res/layout/fragment_challenge.xml
@@ -9,13 +9,12 @@
 
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:background="@color/metal"
         app:tabMode="fixed"
         app:tabGravity="fill"
-        app:tabIndicatorColor="@color/colorAccent"
-        android:id="@+id/tablayout_id"
-         ></android.support.design.widget.TabLayout>
+        app:tabIndicatorColor="@color/deeppurple"
+        android:id="@+id/tablayout_id" />
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
