--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -67,6 +67,7 @@
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
                             <TextView
+                                android:id="@+id/step_count"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="9987"
@@ -74,6 +75,7 @@
                                 android:layout_gravity="right"
                                 android:textColor="@color/materail_green"/>
                             <TextView
+                                android:id="@+id/goal_step"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="/6000"
