--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -1,15 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@drawable/splash_background">
 
     <ImageView
         android:id="@+id/splashscreen"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
-        android:src="@drawable/splash" />
+        android:src="#CCF3F3F3"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="0dp"
+        tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/gout"
+        android:layout_width="163dp"
+        android:layout_height="176dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/logo"
+        android:foregroundGravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/splashscreen"
+        app:layout_constraintEnd_toEndOf="@+id/splashscreen"
+        app:layout_constraintStart_toStartOf="@+id/splashscreen"
+        app:layout_constraintTop_toTopOf="@+id/splashscreen"
+        tools:ignore="MissingConstraints" />
 
 
 
-</LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
