--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,7 +31,12 @@
         <item name="android:windowActionBarOverlay">true</item>
         <item name="background">@color/colorAccent</item>
         <item name="windowActionBarOverlay">true</item>
+    </style>
 
+    <style name="AppTheme.Dark.Dialog" parent="Theme.AppCompat.Dialog">
+        <item name="colorAccent">@color/white</item>
+        <item name="android:textColorPrimary">@color/iron</item>
+        <item name="android:background">@color/aluminum</item>
     </style>
 
 </resources>
