HomeFragment CardView lara ayrıldı

--- a/app/src/main/res/layout/fragment_challenge.xml
+++ b/app/src/main/res/layout/fragment_challenge.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".ChallengeFragment">
+    tools:context=".Fragments.ChallengeFragment">
 
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
