--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="width">420dp</dimen>
+    <dimen name="height">400dp</dimen>
+
     <dimen name="card_view_margin">3dp</dimen>
 
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
