--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="fill_parent"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/splash_background">
 
@@ -32,8 +33,6 @@
         app:layout_constraintStart_toStartOf="@+id/splashscreen"
         app:layout_constraintTop_toTopOf="@+id/splashscreen"
         tools:ignore="MissingConstraints" />
-
-
 
 
 </android.support.constraint.ConstraintLayout>
