--- a/app/src/main/res/drawable/button_border_green.xml
+++ b/app/src/main/res/drawable/button_border_green.xml
@@ -2,8 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!--<gradient android:startColor="#FFFFFF"-->
-        <!--android:endColor="#00FF00"-->
-        <!--android:angle="270" />-->
+    <!--android:endColor="#00FF00"-->
+    <!--android:angle="270" />-->
     <corners android:radius="2dp" />
-    <stroke android:width="2px" android:color="@color/materail_green" />
+    <stroke
+        android:width="2px"
+        android:color="@color/materail_green" />
 </shape>
