--- a/app/src/main/res/drawable/button_border_red.xml
+++ b/app/src/main/res/drawable/button_border_red.xml
@@ -5,5 +5,7 @@
     <!--android:endColor="#00FF00"-->
     <!--android:angle="270" />-->
     <corners android:radius="2dp" />
-    <stroke android:width="2px" android:color="@color/materail_red" />
+    <stroke
+        android:width="2px"
+        android:color="@color/materail_red" />
 </shape>
