--- a/app/src/main/res/drawable/transparent_border.xml
+++ b/app/src/main/res/drawable/transparent_border.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item><shape>
-        <stroke android:width="1dp" android:color="#FFFFFF" />
+    <item>
+        <shape>
+            <stroke android:width="1dp" android:color="#FFFFFF" />
 
-        <solid android:color="@android:color/transparent" />
+            <solid android:color="@android:color/transparent" />
 
-        <corners
-            android:bottomLeftRadius="20dp"
-            android:bottomRightRadius="20dp"
-            android:topLeftRadius="20dp"
-            android:topRightRadius="20dp" />
-    </shape></item>
+            <corners android:bottomLeftRadius="20dp" android:bottomRightRadius="20dp" android:topLeftRadius="20dp" android:topRightRadius="20dp" />
+        </shape>
+    </item>
 
 </selector>
