--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,16 +10,19 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="405dp">
+
         <LinearLayout
             android:background="@drawable/gradient_background"
             android:layout_width="match_parent"
             android:layout_height="270dp"
             android:orientation="vertical">
+
             <ImageView
                 android:layout_marginTop="45dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="120dp"
-                android:layout_height="120dp"/>
+                android:layout_height="120dp" />
+
             <TextView
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center_horizontal"
@@ -28,8 +31,9 @@
                 android:text="Wiliam Snoe"
                 android:textColor="#fff"
                 android:textStyle="bold"
-                android:textSize="21sp"/>
+                android:textSize="21sp" />
         </LinearLayout>
+
         <android.support.v7.widget.CardView
             android:layout_width="400dp"
             android:layout_height="120dp"
@@ -37,23 +41,26 @@
             android:layout_marginTop="210dp"
             android:layout_marginLeft="17dp"
             android:layout_marginRight="17dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:weightSum="3">
+
                 <LinearLayout
                     android:gravity="center"
                     android:orientation="vertical"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Activities"
-                        android:textSize="20sp"
-                        />
+                        android:textSize="20sp" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -61,21 +68,23 @@
                         android:textStyle="bold"
                         android:textSize="20sp"
                         android:paddingTop="10dp"
-                        android:textColor="@color/startBlue"/>
+                        android:textColor="@color/startBlue" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:gravity="center"
                     android:orientation="vertical"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Followers"
-                        android:textSize="20sp"
-                        />
+                        android:textSize="20sp" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -83,21 +92,23 @@
                         android:textStyle="bold"
                         android:textSize="20sp"
                         android:paddingTop="10dp"
-                        android:textColor="@color/startBlue"/>
+                        android:textColor="@color/startBlue" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:gravity="center"
                     android:orientation="vertical"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Following"
-                        android:textSize="20sp"
-                        />
+                        android:textSize="20sp" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -105,15 +116,15 @@
                         android:textStyle="bold"
                         android:textSize="20sp"
                         android:paddingTop="10dp"
-                        android:textColor="@color/startBlue"/>
+                        android:textColor="@color/startBlue" />
 
                 </LinearLayout>
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
     </RelativeLayout>
-    <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -122,13 +133,13 @@
         tools:layout_editor_absoluteY="0dp"
         tools:ignore="MissingConstraints">
 
-    <Button
-        android:textColor="#fff"
-        android:background="@drawable/button_style"
-        android:layout_marginTop="35dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Takip Et"/>
+        <Button
+            android:textColor="#fff"
+            android:background="@drawable/button_style"
+            android:layout_marginTop="35dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Takip Et" />
     </ScrollView>
 </LinearLayout>
