--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,7 +28,8 @@
     <color name="colorPrimaryDark">#FFA000</color>
     <color name="backgroundcolor">#fcfcfc</color>
     <color name="lightgray">#ededed</color>
-    <color name="deeppurple">#7c4dff</color>
+    <!--<color name="deeppurple">#7c4dff</color>-->
+    <color name="deeppurple">#FFC107</color>  <!--Challenge Fragmentta ki çizgi rengi :) -->
     <color name="yello">#ffb300</color>
     <color name="green">#00bfa5</color>
     <color name="darkblue">#23283a</color>
@@ -50,4 +51,5 @@
     <color name="grey_font">#ff9e9e9e</color>
     <color name="text_shadow">#7F000000</color>
     <color name="text_shadow_white">#FFFFFF</color>
+
 </resources>
