--- a/app/src/main/res/layouts/FragmentLayout/layout/fragment_challenge.xml
+++ b/app/src/main/res/layouts/FragmentLayout/layout/fragment_challenge.xml
@@ -7,7 +7,7 @@
     android:layout_marginBottom="@dimen/main_activity_margin_bottom"
     tools:context=".Fragments.ChallengeFragment">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -82,7 +82,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 
     <com.github.clans.fab.FloatingActionMenu
