--- a/app/src/main/res/layouts/FragmentLayout/layout/item_challenge_cards.xml
+++ b/app/src/main/res/layouts/FragmentLayout/layout/item_challenge_cards.xml
@@ -85,7 +85,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/avatar_recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"/>
+                android:layout_height="wrap_content"/>
         </LinearLayout>
 
 
