--- a/app/src/main/res/layouts/FragmentLayout/layout/fragment_profile.xml
+++ b/app/src/main/res/layouts/FragmentLayout/layout/fragment_profile.xml
@@ -40,7 +40,9 @@
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground">
 
+
             <LinearLayout
+                android:id="@+id/main_linear_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="190dp"
@@ -99,6 +101,31 @@
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:src="@drawable/griffin1"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_alignTop="@+id/main_linear_layout"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="10dp"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground">
+
+                <ImageView
+                    android:id="@+id/logout"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/logout"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:text="Logout"
+                    android:textStyle="bold"
+                    android:textSize="10sp"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
