--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,14 +20,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <item name="android:windowBackground">@color/grayLight</item>
+        <!--<item name="android:windowBackground">@color/grayLight</item>-->
 
         <item name="colorControlNormal">@color/iron</item>
-        <item name="colorControlActivated">@color/white</item>
-        <item name="colorControlHighlight">@color/white</item>
-        <item name="android:textColorHint">@color/iron</item>
+        <!--<item name="colorControlActivated">@color/white</item>-->
+        <!--<item name="colorControlHighlight">@color/white</item>-->
+        <!--<item name="android:textColorHint">@color/iron</item>-->
 
-        <item name="colorButtonNormal">@color/primary_darker</item>
+        <!--<item name="colorButtonNormal">@color/primary_darker</item>-->
 
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -45,4 +45,6 @@
         <item name="android:textColorPrimary">@color/iron</item>
         <item name="android:background">@color/aluminum</item>
     </style>
+
+
 </resources>
