Betül Dil Seçeneği Ekleyecek

--- a/app/src/main/res/layouts/FragmentLayout/layout/fragment_challenge.xml
+++ b/app/src/main/res/layouts/FragmentLayout/layout/fragment_challenge.xml
@@ -139,32 +139,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_explore_white_24dp"
-            fab:fab_label="Explore"
+            fab:fab_label="Add New Challenge"
             fab:fab_size="mini" />
 
-        <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/material_design_floating_action_menu_item2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_email_white_24dp"
-            fab:fab_label="Messange"
-            fab:fab_size="mini" />
+        <!--<com.github.clans.fab.FloatingActionButton-->
+            <!--android:id="@+id/material_design_floating_action_menu_item2"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/ic_email_white_24dp"-->
+            <!--fab:fab_label="Messange"-->
+            <!--fab:fab_size="mini" />-->
 
-        <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/material_design_floating_action_menu_item3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_filter_list_white_24dp"
-            fab:fab_label="Filter"
-            fab:fab_size="mini" />
+        <!--<com.github.clans.fab.FloatingActionButton-->
+            <!--android:id="@+id/material_design_floating_action_menu_item3"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/ic_filter_list_white_24dp"-->
+            <!--fab:fab_label="Filter"-->
+            <!--fab:fab_size="mini" />-->
 
-        <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/material_design_floating_action_menu_item4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_chat_white_24dp"
-            fab:fab_label="Pesan Baru"
-            fab:fab_size="mini" />
+        <!--<com.github.clans.fab.FloatingActionButton-->
+            <!--android:id="@+id/material_design_floating_action_menu_item4"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/ic_chat_white_24dp"-->
+            <!--fab:fab_label="Pesan Baru"-->
+            <!--fab:fab_size="mini" />-->
     </com.github.clans.fab.FloatingActionMenu>
 
 
